jun231_오류파일__23시 18분 35초.txt
buffers_g ['', '', '', '', '']
[설정] 저장된 설정 적용 완료
[캡차 로컬설치] 체크 상태: 1
[LOCAL STT] ===== 캡차 로컬설치 시작 =====
[LOCAL STT] 음성캡차 엔진 이미 설치됨
[LOCAL STT] ===== 캡차 로컬설치 완료 =====
[LOCAL STT] 워커 파일 존재: True, 크기: 3172
[LOCAL STT] 워커 파일 읽기 테스트: stdout=, stderr=Traceback (most recent call last):
  File "<string>", line 1, in <module>
  File "<string>", line 2
    import sys, json, os, subprocess, tempfile, uuid,
                                                     ^
SyntaxError: invalid syntax, code=1
[LOCAL STT] Python-STT 경로: C:\Python-STT\python.exe
[LOCAL STT] Python 테스트 stdout: 3.10.11 (tags/v3.10.11:7d4cc5a, Apr  5 2023, 00:38:17) [MSC v.1929 64 bit (AMD64)]
ok
[LOCAL STT] Python 테스트 stderr: 
[LOCAL STT] Python 테스트 코드: 0
[LOCAL STT] 워커 직접 실행: 10초 초과 (정상 - 모델 로딩 중)
[LOCAL STT] 서브프로세스 시작 (PID: 10192)
[LOCAL STT] 상태: {'status': 'ready'}
시작
realID jun231
realPW test1234
로그인 성공
모드4
[로그 초기화 완료] C:\Users\JAMES1\Desktop\page_info_log.txt
----------------------------------------
----------------------------------------
----------------------------------------
----------------------------------------
loop_oper 0
20
----------------------------------------
----------------------------------------
----------------------------------------
----------------------------------------
모든 Chrome 프로세스를 종료했습니다.
[디바이스 모드] device_mode=0 → session_mode=desktop
[FP] mode=desktop UA=Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/149.0.4149.0 Safari/537.36
[FP] window=1920x1080, lang=ko-KR,ko;q=0.9, mobile=False
[노드 진단] HTTP 5004 listen: True
[노드 진단] Chrome 메이저 버전: 149
[노드 진단] ⚠ Chrome 138+ 는 MV2 확장 차단 가능 — 노드 인증 안 될 수도 있음
[노드] Chrome HTTP 127.0.0.1:5004 + 인증 확장 적용
[노드] 확장 경로: C:/Users/JAMES1/AppData/Local/Temp/smartproxy_auth__q0479n5
[노드] manifest.json 존재: True, background.js 존재: True
[워밍업] 진입 URL: https://www.naver.com/ (session_mode=desktop)
시작
File saved to: C:\Users\JAMES1\Desktop\logfile.txt